@@ -40,7 +40,9 @@
                         "Element.update('build_#{project.to_param}', 'Wait...')"
            ) do %>
         <button 
-            <% if $DISABLE_BUILD %>onclick="alert('Build Now button is disabled on the demo site.'); return false;"<% end %>
+            <% if Configuration.disable_build_now -%>
+              onclick="alert('Build Now button is disabled on the demo site.'); return false;"
+            <% end -%>
             id="build_<%= project.to_param %>" type="submit" class="build_button" value="txt" alt="Build Now">
           <% if project.builder_state_and_activity == 'builder_down' %>
             Start Builder
