@@ -4,7 +4,10 @@ Project.configure do |project|
   
   # Send email notifications about broken and fixed builds to email1@your.site, email2@your.site (default: send to nobody)
   # project.email_notifier.emails = ['email1@your.site', 'email2@your.site']
-  
+
+  # Set email 'from' field to john@doe.com:
+  # project.email_notifier.from = 'john@doe.com'
+
   # Build the project by invoking rake task 'custom'
   # project.rake_task = 'custom'
 
@@ -14,5 +17,5 @@ Project.configure do |project|
 
   # Ping Subversion for new revisions every 5 minutes (default: 30 seconds)
   # project.scheduler.polling_interval = 5.minutes
-  
+
 end
